--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,52 @@
-placeholder
+*
+{
+    margin: 0px;
+    padding: 0px;
+}
+
+div {
+    margin: 10px;
+    padding: 5px;
+    background-color: red;
+    text-align: center;
+}
+
+div.navtop {
+    margin: 10px;
+    padding: 5px;
+    background-color: blue;
+    text-align: center;
+    width: 100%;
+}
+
+div ul li {
+    font-size: 20px;
+    display: inline-block;
+    padding: 10px;
+    text-align: center;
+    border-style: solid;
+    background-color: gray;
+}
+
+div.content {
+    height: 350px;
+    width: 100%;
+    background-color: orange;
+}
+
+.footer {
+    margin: 0px;
+    padding: 0px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: gray;
+    color: black;
+    text-align: center;
+}
+
+p {
+    text-align: center;
+    font-size: 10px;
+}
