--- a/css/style.css
+++ b/css/style.css
@@ -4,34 +4,46 @@
     padding: 0px;
 }
 
-div {
-    margin: 10px;
-    padding: 5px;
-    background-color: red;
-    text-align: center;
-}
-
 div.navtop {
-    margin: 10px;
+    margin: 0px;
     padding: 5px;
-    background-color: blue;
+    background-color: #4f5e8a;
     text-align: center;
     width: 100%;
+    position: fixed;
+    border-bottom: 1px solid #b8cfd4;
+}
+
+div.background-image {
+    background-color: #201649;
+    padding: 0px;
+    margin-bottom: 15px;
+    width: 100%;
+    height: auto;
+}
+
+div.background-image img {
+    max-width: 30%;
+    width: 30%;
+    height: 50%;
+    object-fit: contain;
+    max-height: 50%;
+    padding: 0px;
 }
 
 div ul li {
     font-size: 20px;
     display: inline-block;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
-    border-style: solid;
-    background-color: gray;
 }
 
 div.content {
-    height: 350px;
+    margin: 0px;
+    padding: 0px;
+    height: 550px;
     width: 100%;
-    background-color: orange;
+    background-color: white;
 }
 
 .footer {
@@ -41,12 +53,13 @@ div.content {
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: gray;
+    background-color: #90a9ba;
     color: black;
     text-align: center;
+    height: 20px;
 }
 
 p {
-    text-align: center;
+    text-align: left;
     font-size: 10px;
 }
